/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

package dolittle.timeseries.connectors.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.Connectors.Server.Grpc";

message RegisterResult {
    
}
