/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";

package dolittle.timeseries.connectors.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.Connectors.Grpc.Server";

message StreamConnector {
    guid id = 1;
    string name = 2;
    repeated string tags = 3;
}