
/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "google/protobuf/Empty.proto";
import "dolittle/timeseries/datapoints/tag_data_point.proto";

package dolittle.timeseries.connectors.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.Connectors.Grpc.Server";

message StreamTagDataPoints {
    repeated dolittle.timeseries.datapoints.TagDataPoint DataPoints=1;
}

// Represents the service for working with connectors that are stream based
service StreamConnectors {
    rpc Open(stream StreamTagDataPoints) returns(google.protobuf.Empty) {}
}